Update products, brands rendering and add line-products page

--- a/admin/products/index.html
+++ b/admin/products/index.html
@@ -168,6 +168,7 @@
 <th class="px-6 py-4 text-[#baba9c] font-bold text-xs uppercase tracking-widest">Product Info</th>
 <th class="px-6 py-4 text-[#baba9c] font-bold text-xs uppercase tracking-widest">Brand</th>
 <th class="px-6 py-4 text-[#baba9c] font-bold text-xs uppercase tracking-widest">Category</th>
+<th class="px-6 py-4 text-[#baba9c] font-bold text-xs uppercase tracking-widest">Line</th>
 <th class="px-6 py-4 text-[#baba9c] font-bold text-xs uppercase tracking-widest">Status</th>
 <th class="px-6 py-4 text-[#baba9c] font-bold text-xs uppercase tracking-widest text-right">Actions</th>
 </tr>
