refactor: Replace MyLiquido links with buttons across multiple pages and update carousel functionality for seamless scrolling

--- a/public/line-products.html
+++ b/public/line-products.html
@@ -86,7 +86,6 @@
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="index.html">Home</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="brands.html">Marchi</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="products.html">Prodotti</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="myliquido.html">MyLiquido</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="about.html">Chi Siamo</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="contact.html">Contatti</a>
 <a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="faq.html">FAQ</a>
@@ -98,10 +97,9 @@
                 aria-label="Toggle theme">
                 <span class="theme-icon material-symbols-outlined text-lg">dark_mode</span>
             </button>
-<button class="bg-primary hover:bg-white text-background-dark px-6 py-2.5 rounded-sm font-black text-xs uppercase tracking-widest transition-all flex items-center gap-2 accent-glow">
-<span class="material-symbols-outlined text-lg">location_on</span>
-                Trova un Negozio
-            </button>
+<a href="myliquido.html" class="bg-primary hover:bg-white text-background-dark px-6 py-2.5 rounded-sm font-black text-xs uppercase tracking-widest transition-all flex items-center gap-2 accent-glow">
+                MyLiquido
+            </a>
 </div>
 </div>
 </header>
@@ -273,4 +271,5 @@
         }
     </script>
 </body></html>
+
 
