--- a/public/brands.html
+++ b/public/brands.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
-<html class="dark" lang="it">
+<html lang="it">
 
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Marchi Partner Vape Premium | LIQUIDO Vape Shop</title>
-    <meta name="description" content="Scopri i migliori marchi vape premium disponibili a LIQUIDO: GeekVape, Vaporesso, Dinner Lady, Voopoo, Smok e altri. Marchi vape di alta qualità a Monterotondo, Roma."/>
-    <meta name="keywords" content="marchi vape, marchi vape premium, GeekVape, Vaporesso, Dinner Lady, Voopoo, Smok, brand vape, vape shop marchi, marchi vape Italia"/>
-    <meta name="author" content="LIQUIDO Vape Shop"/>
-    <meta name="robots" content="index, follow"/>
-    <link rel="canonical" href="https://liquido.vapeshop/public/brands.html"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Marchi Partner Vape Premium | LIQUIDO Vape Shop"/>
-    <meta property="og:description" content="Scopri i migliori marchi vape premium disponibili a LIQUIDO: GeekVape, Vaporesso, Dinner Lady e altri marchi di alta qualità."/>
-    <meta property="og:url" content="https://liquido.vapeshop/public/brands.html"/>
-    <meta property="og:site_name" content="LIQUIDO Vape Shop"/>
-    <meta property="og:locale" content="it_IT"/>
-    <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:title" content="Marchi Partner Vape Premium | LIQUIDO"/>
-    <meta name="twitter:description" content="Scopri i migliori marchi vape premium disponibili a LIQUIDO a Monterotondo, Roma."/>
-    <meta name="geo.region" content="IT-LA"/>
-    <meta name="geo.placename" content="Monterotondo"/>
+    <meta name="description"
+        content="Scopri i migliori marchi vape premium disponibili a LIQUIDO: GeekVape, Vaporesso, Dinner Lady, Voopoo, Smok e altri. Marchi vape di alta qualità a Monterotondo, Roma." />
+    <meta name="keywords"
+        content="marchi vape, marchi vape premium, GeekVape, Vaporesso, Dinner Lady, Voopoo, Smok, brand vape, vape shop marchi, marchi vape Italia" />
+    <meta name="author" content="LIQUIDO Vape Shop" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://liquido.vapeshop/public/brands.html" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Marchi Partner Vape Premium | LIQUIDO Vape Shop" />
+    <meta property="og:description"
+        content="Scopri i migliori marchi vape premium disponibili a LIQUIDO: GeekVape, Vaporesso, Dinner Lady e altri marchi di alta qualità." />
+    <meta property="og:url" content="https://liquido.vapeshop/public/brands.html" />
+    <meta property="og:site_name" content="LIQUIDO Vape Shop" />
+    <meta property="og:locale" content="it_IT" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Marchi Partner Vape Premium | LIQUIDO" />
+    <meta name="twitter:description"
+        content="Scopri i migliori marchi vape premium disponibili a LIQUIDO a Monterotondo, Roma." />
+    <meta name="geo.region" content="IT-LA" />
+    <meta name="geo.placename" content="Monterotondo" />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&amp;display=swap"
         rel="stylesheet" />
     <link
@@ -78,44 +82,9 @@
     </style>
 </head>
 
-<body class="bg-background-dark text-white transition-colors duration-300">
-<!-- Barre de message pour les visiteurs -->
-<nav class="fixed top-0 w-full z-[60] bg-primary/10 border-b border-primary/20 backdrop-blur-sm">
-    <div class="max-w-[1440px] mx-auto px-6 lg:px-20 py-2.5">
-        <div class="flex items-center justify-center gap-2 text-xs font-bold uppercase tracking-widest text-primary">
-            <span class="material-symbols-outlined text-sm">info</span>
-            <p class="text-center">Benvenuto su LIQUIDO - Scopri la nostra selezione premium di prodotti per il vaping</p>
-        </div>
-    </div>
-</nav>
-<header class="fixed top-[40px] w-full z-50 border-b border-white/5 dark:border-white/5 border-black/10 glass-effect">
-<div class="max-w-[1440px] mx-auto px-6 lg:px-20 h-20 flex items-center justify-between relative">
-            <a href="index.html" class="flex items-center gap-3 cursor-pointer hover:opacity-80 transition-opacity">
-                <img src="../assets/images/Logo LIQUIDO/LOGO 15cm WEB Trasparente_02.png" alt="LIQUIDO VAPE SHOP" class="block dark:hidden" style="width: 120px; height: 115px; object-fit: contain;" />
-                <img src="../assets/images/Logo LIQUIDO/LOGO 15cm WEB Trasparente_04.png" alt="LIQUIDO VAPE SHOP" class="hidden dark:block" style="width: 120px; height: 115px; object-fit: contain;" />
-            </a>
-<nav class="hidden md:flex items-center gap-8 absolute left-1/2 transform -translate-x-1/2">
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="index.html">Home</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors text-primary" href="brands.html">Marchi</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="products.html">Prodotti</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="about.html">Chi Siamo</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="contact.html">Contatti</a>
-<a class="text-xs font-bold uppercase tracking-widest hover:text-primary transition-colors" href="faq.html">FAQ</a>
-</nav>
-<div class="flex items-center gap-6">
-            <button
-                id="theme-toggle"
-                class="size-10 flex items-center justify-center rounded-sm border border-white/10 dark:border-white/10 border-black/10 hover:bg-primary hover:text-background-dark dark:hover:text-background-dark text-white dark:text-white transition-all"
-                aria-label="Toggle theme">
-                <span class="theme-icon material-symbols-outlined text-lg">dark_mode</span>
-            </button>
-<a href="myliquido.html" class="bg-primary hover:bg-white text-background-dark px-6 py-2.5 rounded-sm font-black text-xs uppercase tracking-widest transition-all flex items-center gap-2 accent-glow">
-                MyLiquido
-            </a>
-</div>
-</div>
-</header>
-<main class="pt-[120px] max-w-[1440px] mx-auto px-6 lg:px-20 pb-24">
+<body class="bg-white text-background-dark transition-colors duration-300">
+    <!-- Top navigation and header loaded dynamically via component-loader.js -->
+    <main class="pt-[120px] max-w-[1440px] mx-auto px-6 lg:px-20 pb-24">
         <section class="relative px-6 py-20 md:py-32 text-center overflow-hidden">
             <div class="absolute inset-0 z-0">
                 <div
@@ -129,31 +98,28 @@
                 <h1 class="text-6xl md:text-8xl font-black tracking-tighter leading-none italic uppercase">
                     Partner <span class="text-primary">Brands</span>
                 </h1>
-                <p class="text-lg md:text-xl text-gray-600 dark:text-white/50 max-w-2xl mx-auto leading-relaxed font-light">
+                <p class="text-lg md:text-xl text-gray-600 max-w-2xl mx-auto leading-relaxed font-light">
                     Exclusively curated partnerships with industry pioneers. We bring the world's most innovative vaping
                     technology and refined flavors to the LIQUIDO collection.
                 </p>
             </div>
         </section>
         <section class="px-6 mb-16">
-            <div class="flex flex-col md:flex-row items-center justify-between gap-8 border-y border-white/5 py-10">
+            <div class="flex flex-col md:flex-row items-center justify-between gap-8 border-y border-black/10 py-10">
                 <div class="relative w-full md:max-w-md">
                     <span
                         class="material-symbols-outlined absolute left-4 top-1/2 -translate-y-1/2 text-gray-500 dark:text-white/30">search</span>
                     <input
-                        class="w-full pl-12 pr-4 py-4 bg-white/5 dark:bg-white/5 bg-gray-100 border-none focus:ring-1 focus:ring-primary/50 text-background-dark dark:text-white placeholder:text-gray-400 dark:placeholder:text-white/20 text-sm tracking-wide"
+                        class="w-full pl-12 pr-4 py-4 bg-gray-100 border-none focus:ring-1 focus:ring-primary/50 text-background-dark placeholder:text-gray-400 text-sm tracking-wide"
                         placeholder="Search brands..." type="text" />
                 </div>
                 <div class="flex flex-wrap items-center justify-center gap-2" id="section-filters">
-                    <button
-                        data-section-id="all"
+                    <button data-section-id="all"
                         class="section-filter-btn px-6 py-2.5 bg-primary text-black text-[11px] font-bold uppercase tracking-widest transition-all duration-200">All</button>
-                    <button
-                        data-section-id="cat_dispositivi"
-                        class="section-filter-btn px-6 py-2.5 bg-white/5 dark:bg-white/5 bg-gray-100 hover:bg-white/10 dark:hover:bg-white/10 hover:bg-gray-200 transition-all duration-200 text-gray-700 dark:text-white/70 text-[11px] font-bold uppercase tracking-widest">Hardware</button>
-                    <button
-                        data-section-id="cat_liquidi"
-                        class="section-filter-btn px-6 py-2.5 bg-white/5 dark:bg-white/5 bg-gray-100 hover:bg-white/10 dark:hover:bg-white/10 hover:bg-gray-200 transition-all duration-200 text-gray-700 dark:text-white/70 text-[11px] font-bold uppercase tracking-widest">E-liquids</button>
+                    <button data-section-id="cat_dispositivi"
+                        class="section-filter-btn px-6 py-2.5 bg-gray-100 hover:bg-gray-200 transition-all duration-200 text-gray-700 text-[11px] font-bold uppercase tracking-widest">Hardware</button>
+                    <button data-section-id="cat_liquidi"
+                        class="section-filter-btn px-6 py-2.5 bg-gray-100 hover:bg-gray-200 transition-all duration-200 text-gray-700 text-[11px] font-bold uppercase tracking-widest">E-liquids</button>
                 </div>
             </div>
         </section>
@@ -274,7 +240,8 @@
                     </div>
                 </div>
             </div>
-            <div id="partner-brands-footer" class="border-y border-white/5 py-12 mb-12 flex flex-wrap justify-center md:justify-between items-center gap-12 opacity-30 grayscale hover:grayscale-0 hover:opacity-100 transition-all">
+            <div id="partner-brands-footer"
+                class="border-y border-white/5 py-12 mb-12 flex flex-wrap justify-center md:justify-between items-center gap-12 opacity-30 grayscale hover:grayscale-0 hover:opacity-100 transition-all">
                 <!-- Partner brand logos will be loaded dynamically -->
             </div>
             <div
@@ -297,9 +264,10 @@
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-analytics-compat.js"></script>
-    
+
     <!-- Catalog Services -->
-    <script src="../src/js/modules/theme-toggle.js"></script>
+    <!-- Component Loader (must be loaded first) -->
+    <script src="../shared/js/component-loader.js"></script>
     <script src="../src/js/modules/age-verification.js"></script>
     <script src="../src/js/services/firebase-config.js"></script>
     <script src="../src/js/services/firebase-catalog-service.js"></script>
@@ -309,10 +277,6 @@
     <script src="../src/js/modules/catalog-init.js"></script>
     <script src="../src/js/pages/brands-page.js"></script>
     <script>
-        // Initialize theme toggle
-        if (typeof ThemeToggle !== 'undefined') {
-            ThemeToggle.init();
-        }
     </script>
 </body>
 
