--- a/public/brands.html
+++ b/public/brands.html
@@ -131,7 +131,7 @@
         <section class="relative px-6 py-4 md:py-8 overflow-hidden">
             <div class="absolute inset-0 z-0">
                 <div
-                    class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[800px] h-[800px] bg-primary/5 blur-[120px] rounded-full">
+                    class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[800px] h-[800px] bg-primary/20 blur-[120px] rounded-full">
                 </div>
             </div>
             <div class="relative z-10 max-w-6xl mx-auto flex justify-center">
@@ -139,7 +139,7 @@
                     <img src="../assets/images/banner_blog_2_-removebg-preview.png" alt="LIQUIDO Premium Brands Banner"
                         class="w-full h-auto animate-float drop-shadow-2xl" />
                     <!-- Effet de glow derrière l'image -->
-                    <div class="absolute inset-0 bg-primary/10 blur-3xl -z-10 scale-90"></div>
+                    <div class="absolute inset-0 bg-primary/30 blur-3xl -z-10 scale-90"></div>
                 </div>
             </div>
         </section>
@@ -148,10 +148,10 @@
         <section class="relative px-6 py-8 md:py-12 text-center overflow-hidden">
             <div class="relative z-10 max-w-4xl mx-auto space-y-8">
                 <div
-                    class="inline-block px-4 py-1 border border-primary/30 text-primary text-[10px] font-bold uppercase tracking-[0.3em] mb-4">
+                    class="inline-block px-4 py-1 border-2 border-primary bg-primary/10 text-primary text-[10px] font-bold uppercase tracking-[0.3em] mb-4 shadow-lg shadow-primary/20">
                     Official Partners</div>
                 <h1 class="text-6xl md:text-8xl font-black tracking-tighter leading-none italic uppercase">
-                    Partner <span class="text-primary">Brands</span>
+                    Partner <span class="text-primary drop-shadow-[0_0_15px_rgba(248,237,112,0.5)]">Brands</span>
                 </h1>
                 <p class="text-lg md:text-xl text-gray-600 max-w-2xl mx-auto leading-relaxed font-light">
                     Exclusively curated partnerships with industry pioneers. We bring the world's most innovative vaping
@@ -185,10 +185,10 @@
                 </div>
                 <div class="relative z-10 flex flex-col sm:flex-row gap-4 w-full md:w-auto">
                     <button
-                        class="px-10 py-5 bg-black text-primary font-black text-[12px] uppercase tracking-[0.2em] hover:scale-105 transition-all">Submit
+                        class="px-10 py-5 bg-black text-primary font-black text-[12px] uppercase tracking-[0.2em] hover:scale-105 transition-all shadow-xl shadow-primary/30 hover:shadow-2xl hover:shadow-primary/50">Submit
                         Request</button>
                     <button
-                        class="px-10 py-5 bg-transparent border-2 border-black text-black font-black text-[12px] uppercase tracking-[0.2em] hover:bg-black hover:text-primary transition-all">Media
+                        class="px-10 py-5 bg-transparent border-2 border-black text-black font-black text-[12px] uppercase tracking-[0.2em] hover:bg-black hover:text-primary hover:shadow-xl hover:shadow-primary/30 transition-all">Media
                         Kit</button>
                 </div>
             </div>
@@ -202,7 +202,7 @@
                         <div class="flex items-baseline">
                             <span class="text-3xl font-black tracking-tighter text-white italic">LIQUIDO</span>
                             <div class="ml-1 flex items-center">
-                                <div class="w-3 h-4 bg-primary rounded-full"></div>
+                                <div class="w-3 h-4 bg-primary rounded-full shadow-lg shadow-primary/50"></div>
                             </div>
                         </div>
                     </div>
@@ -211,7 +211,9 @@
                         and globally recognized flavor profiles for the discerning enthusiast.
                     </p>
                     <div class="space-y-4">
-                        <h4 class="text-[10px] font-black uppercase tracking-[0.3em] text-primary">Contact Us</h4>
+                        <h4
+                            class="text-[10px] font-black uppercase tracking-[0.3em] text-primary drop-shadow-[0_0_8px_rgba(248,237,112,0.4)]">
+                            Contact Us</h4>
                         <div class="flex flex-col gap-3 text-sm font-bold text-white/60">
                             <div class="flex items-center gap-3">
                                 <span class="material-symbols-outlined text-primary text-lg">mail</span>
@@ -226,7 +228,9 @@
                 </div>
                 <div class="lg:col-span-5 grid grid-cols-2 md:grid-cols-2 gap-12">
                     <div>
-                        <h4 class="font-black mb-8 text-[11px] uppercase tracking-[0.4em] text-primary">Explore</h4>
+                        <h4
+                            class="font-black mb-8 text-[11px] uppercase tracking-[0.4em] text-primary drop-shadow-[0_0_8px_rgba(248,237,112,0.4)]">
+                            Explore</h4>
                         <ul class="space-y-4 text-[11px] font-bold uppercase tracking-[0.2em] text-white/40">
                             <li><a class="hover:text-primary transition-colors flex items-center gap-2"
                                     href="index.html">Home</a></li>
@@ -241,7 +245,9 @@
                         </ul>
                     </div>
                     <div>
-                        <h4 class="font-black mb-8 text-[11px] uppercase tracking-[0.4em] text-primary">Highlights</h4>
+                        <h4
+                            class="font-black mb-8 text-[11px] uppercase tracking-[0.4em] text-primary drop-shadow-[0_0_8px_rgba(248,237,112,0.4)]">
+                            Highlights</h4>
                         <ul class="space-y-4 text-[11px] font-bold uppercase tracking-[0.2em] text-white/40">
                             <li><a class="hover:text-primary transition-colors" href="#">New Arrivals</a></li>
                             <li><a class="hover:text-primary transition-colors" href="#">Limited Editions</a></li>
@@ -252,7 +258,9 @@
                     </div>
                 </div>
                 <div class="lg:col-span-3 space-y-8">
-                    <h4 class="font-black mb-4 text-[11px] uppercase tracking-[0.4em] text-primary">Newsletter</h4>
+                    <h4
+                        class="font-black mb-4 text-[11px] uppercase tracking-[0.4em] text-primary drop-shadow-[0_0_8px_rgba(248,237,112,0.4)]">
+                        Newsletter</h4>
                     <p class="text-xs text-white/30 font-bold uppercase tracking-wider mb-6">Stay updated with early
                         access.</p>
                     <div class="relative">
