--- a/public/contact.html
+++ b/public/contact.html
@@ -87,17 +87,13 @@
         </div>
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-start">
             <div class="flex flex-col gap-10">
-                <div
-                    class="flex flex-col gap-4 rounded-xl border border-[#54543b] bg-[#27271b] p-6 hover:border-primary transition-colors text-white">
-                    <span class="material-symbols-outlined text-primary text-3xl">call</span>
-                    <div>
-                        <h3 class="text-white text-lg font-bold">WhatsApp</h3>
-                        <p class="text-[#baba9c] text-sm">+39 379 134 5367</p>
-                        <a href="https://wa.me/393791345367" target="_blank" rel="noopener noreferrer"
-                            class="inline-block mt-3 bg-primary hover:bg-white text-background-dark px-6 py-2 rounded-sm font-black text-xs uppercase tracking-widest transition-all">
-                            Contattaci su WhatsApp
-                        </a>
+                <div class="bg-[#27271b] border border-[#54543b] rounded-xl p-6 flex flex-col gap-2">
+                    <div class="flex items-center gap-3 text-primary mb-2">
+                        <span class="material-symbols-outlined">home_pin</span>
+                        <h3 class="font-bold text-lg uppercase tracking-wider">Main Headquarters</h3>
                     </div>
+                    <p class="text-white text-xl font-bold">via Adige 43C</p>
+                    <p class="text-[#baba9c]">00015 - Monterotondo (RM)</p>
                 </div>
                 <div class="flex flex-col gap-4">
                     <h2 class="text-white text-xl font-bold px-1">Opening Hours</h2>
@@ -116,6 +112,48 @@
                         </div>
                     </div>
                 </div>
+                <div
+                    class="flex flex-col gap-4 rounded-xl border border-[#54543b] bg-[#27271b] p-6 hover:border-primary transition-colors text-white">
+                    <div class="flex items-start justify-between">
+                        <span class="material-symbols-outlined text-primary text-3xl">call</span>
+                        <div class="flex gap-3">
+                            <a href="https://www.instagram.com/liquido.vapeshop/" target="_blank"
+                                rel="noopener noreferrer"
+                                class="w-9 h-9 rounded-lg bg-[#181811] border border-[#393928] flex items-center justify-center text-white hover:bg-primary hover:text-black hover:border-primary transition-all">
+                                <svg class="size-4" fill="currentColor" viewBox="0 0 24 24">
+                                    <path
+                                        d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.947.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c.796 0 1.441.645 1.441 1.44s-.645 1.44-1.441 1.44c-.795 0-1.439-.645-1.439-1.44s.644-1.44 1.439-1.44z">
+                                    </path>
+                                </svg>
+                            </a>
+                            <a href="https://www.facebook.com/liquido.vapeshop/" target="_blank"
+                                rel="noopener noreferrer"
+                                class="w-9 h-9 rounded-lg bg-[#181811] border border-[#393928] flex items-center justify-center text-white hover:bg-primary hover:text-black hover:border-primary transition-all">
+                                <svg class="size-4" fill="currentColor" viewBox="0 0 24 24">
+                                    <path
+                                        d="M22.675 0h-21.35c-.732 0-1.325.593-1.325 1.325v21.351c0 .731.593 1.324 1.325 1.324h11.495v-9.294h-3.128v-3.622h3.128v-2.671c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12v9.293h6.116c.73 0 1.323-.593 1.323-1.324v-21.35c0-.732-.593-1.325-1.325-1.325z">
+                                    </path>
+                                </svg>
+                            </a>
+                            <a href="https://www.tiktok.com/@liquido.vapeshop" target="_blank" rel="noopener noreferrer"
+                                class="w-9 h-9 rounded-lg bg-[#181811] border border-[#393928] flex items-center justify-center text-white hover:bg-primary hover:text-black hover:border-primary transition-all">
+                                <svg class="size-4" fill="currentColor" viewBox="0 0 24 24">
+                                    <path
+                                        d="M19.59 6.69a4.83 4.83 0 0 1-3.77-4.25V2h-3.45v13.67a2.89 2.89 0 0 1-5.2 1.74 2.89 2.89 0 0 1 2.31-4.64 2.93 2.93 0 0 1 .88.13V9.4a6.84 6.84 0 0 0-1-.05A6.33 6.33 0 0 0 5 20.1a6.34 6.34 0 0 0 10.86-4.43v-7a8.16 8.16 0 0 0 4.77 1.52v-3.4a4.85 4.85 0 0 1-1-.1z">
+                                    </path>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <div>
+                        <h3 class="text-white text-lg font-bold">WhatsApp</h3>
+                        <p class="text-[#baba9c] text-sm">+39 379 134 5367</p>
+                        <a href="https://wa.me/393791345367" target="_blank" rel="noopener noreferrer"
+                            class="inline-block mt-3 bg-primary hover:bg-white text-background-dark px-6 py-2 rounded-sm font-black text-xs uppercase tracking-widest transition-all">
+                            Contattaci su WhatsApp
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="flex flex-col gap-6 lg:sticky lg:top-24">
                 <div
@@ -123,17 +161,6 @@
                     <iframe class="absolute inset-0 w-full h-full border-0"
                         src="https://maps.google.com/maps?q=Via+Adige+43C,+00015+Monterotondo+RM,+Italy&t=&z=15&ie=UTF8&iwloc=&output=embed"
                         allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    <div class="absolute inset-0 flex items-center justify-center pointer-events-none z-10">
-                        <div class="relative flex flex-col items-center">
-                            <div
-                                class="bg-primary text-black p-3 rounded-full shadow-[0_0_30px_rgba(242,242,13,0.5)] animate-pulse">
-                                <span class="material-symbols-outlined text-3xl font-bold">location_on</span>
-                            </div>
-                            <div class="mt-2 bg-[#181811] border border-primary px-4 py-2 rounded-lg shadow-xl">
-                                <p class="text-white font-bold text-sm">LIQUIDO Flagship</p>
-                            </div>
-                        </div>
-                    </div>
                     <div class="absolute bottom-6 left-6 flex flex-col gap-2 z-20 pointer-events-auto">
                         <button
                             class="bg-[#27271b] text-white p-2 rounded-lg border border-[#54543b] hover:bg-primary hover:text-black transition-colors pointer-events-auto">
@@ -152,14 +179,6 @@
                             GET DIRECTIONS
                         </a>
                     </div>
-                </div>
-                <div class="bg-[#27271b] border border-[#54543b] rounded-xl p-6 flex flex-col gap-2">
-                    <div class="flex items-center gap-3 text-primary mb-2">
-                        <span class="material-symbols-outlined">home_pin</span>
-                        <h3 class="font-bold text-lg uppercase tracking-wider">Main Headquarters</h3>
-                    </div>
-                    <p class="text-white text-xl font-bold">via Adige 43C</p>
-                    <p class="text-[#baba9c]">00015 - Monterotondo (RM)</p>
                 </div>
             </div>
         </div>
